# foaas-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: configuration.rs  content_type.rs  error.rs  foaas.rs  lib.rs  main.rs  operation.rs
server/: Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs  operation.rs
src/: configuration.rs  content_type.rs  error.rs  field.rs  insult.rs  insult_service.rs  lib.rs  main.rs  operation.rs  rendering.rs  route.rs  router.rs
src/api/: error.rs  field.rs  insult.rs  rendering.rs  router.rs
