[package]
name = "foaas-rs"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
#serde-xml-rs = "0.3.1"
