[package]
name = "foaas-rs"
version = "0.1.0"
authors = ["jil sahm"]
edition = "2018"

[dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.5.6"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde-xml-rs = "0.5.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"