[package]
name = "foaas-client-rs"
version = "0.1.0"
authors = ["jil sahm"]
description = "Rust implementation of the FOAAS client"
edition = "2018"

[dependencies]
clap = { version = "3.2.6", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }